# VoxAI

./: .gitignore  README.md  package.json  t.txt
3D Print/: Bottom.step  Case-Info  Lid.step  Top.step
Lecture/: unsaved document 1
Lecture/src/: lectures.json  window.py  window.ui  window.ui~
Project/: meson.build  org.gnome.Lecture.json~  transcribe.py
Project/data/: meson.build  org.gnome.Lecture.appdata.xml.in  org.gnome.Lecture.desktop.in  org.gnome.Lecture.gschema.xml
Project/po/: POTFILES  meson.build
Project/src/: lecture.gresource.xml  lecture.in  main.py  meson.build
backend/: IMPLEMENTATION_STATUS.md  Plan.md  README.md  pyproject.toml  requirements.txt  t.md  t.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  code.py  files.py  query.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  pinecone.py  supabase.py
backend/app/models/: __init__.py  file_metadata.py  notebook_file.py
backend/app/schemas/: __init__.py  code.py  file.py
backend/app/services/: __init__.py  code_execution_service.py  embedding_service.py  file_service.py  llm_service.py  rag_service.py
backend/app/services/file_processors/: __init__.py  audio_processor.py  document_processor.py  image_processor.py  presentation_processor.py  spreadsheet_processor.py  text_processor.py  video_processor.py
backend/app/tests/: test_processors.py
backend/sandbox/: Dockerfile  README.md  main.py  requirements.txt
backend/scripts/: create_test_files.py
backend/test_files/: sample.csv  sample.docx  sample.md  sample.pptx  sample.txt  sample.xls  sample.xlsx
backend/tests/: __init__.py  test_files.py  test_health.py  test_query.py
frontend/: LICENSE  index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/supabase/: README.md
src/: App.tsx  index.css  main.tsx
(+84 files in other folders)
