[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxai"
version = "0.1.0"
description = "VoxAI Backend - A high-performance RAG system with LLM integration"
authors = [
    {name = "VoxAI Team"}
]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[project.dependencies]
fastapi = ">=0.104.1"
uvicorn = ">=0.24.0"
pydantic = ">=2.4.2"
pydantic-settings = ">=2.0.3"
httpx = ">=0.25.1"
pinecone-client = ">=2.2.4"
asyncio = ">=3.4.3"
python-dotenv = ">=1.0.0"
supabase = ">=1.2.0"
python-multipart = ">=0.0.6"
tenacity = ">=8.2.3"
loguru = ">=0.7.2"
langchain = ">=0.0.330"
langchain-community = ">=0.0.16"
langchain-core = ">=0.1.5"
tiktoken = ">=0.5.1"
openai = ">=1.0.0"
anthropic = ">=0.5.0"
google-generativeai = ">=0.3.0"
# File processing dependencies
openai-whisper = ">=20231117"
pymupdf = ">=1.23.8"
python-docx = ">=0.8.11"
markdown = ">=3.5.1"
pandas = ">=2.1.3"
openpyxl = ">=3.1.2"
xlrd = ">=2.0.1"
python-pptx = ">=0.6.22"
pillow = ">=10.1.0"
opencv-python = ">=4.8.1.78"
ffmpeg-python = ">=0.2.0"
pyyaml = ">=6.0.1"